--- a/src/styles/Comunidades.css
+++ b/src/styles/Comunidades.css
@@ -129,8 +129,8 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
-  width: 50%; /* Ajuste a largura para centralizar */
-  max-width: 800px;
+  width: 150%; /* Ajuste a largura para centralizar */
+  max-width: 1000px;
   margin: 0 auto;
   align-items: center; /* Centraliza os itens dentro do contêiner */
 }
@@ -140,6 +140,7 @@
 .community-card { 
   display: flex;
   background: white; /* Fundo branco */
+  border-radius: 15px; /* Bordas arredondadas */
   overflow: hidden;
   height: 150px; /* Aumenta a altura para acomodar a imagem maior */
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); /* Sombra mais aparente */
@@ -226,21 +227,21 @@
 @media (max-width: 768px) {
   .community-card {
     display: flex;
-    background: transparent; /* Remove o fundo branco no modo mobile */
-    border-radius: 0; /* Remove a borda arredondada */
+    background: white; 
+    border-radius: 15px;
     overflow: hidden;
-    height: auto; /* Deixa a altura do card ajustável */
-    box-shadow: none; /* Remove a sombra */
-    width: 95%; /* Ajuste a largura conforme necessário */
-    max-width: 700px; /* Limite a largura máxima para criar espaço */
+    height: 150px;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+    width: 90%; /* Ajuste a largura conforme necessário */
+    max-width: 600px; /* Limite a largura máxima para criar espaço */
     margin: 0 auto;
     align-items: center;
-    padding: 20px; /* Aumenta o padding para mais espaço */
+    padding: 10px; /* Aumenta o padding para mais espaço */
   }
   
   .community-info {
     flex: 1;
-    padding: 15px 20px; /* Adiciona padding dentro do conteúdo */
+    padding: 10px; /* Adiciona padding dentro do conteúdo */
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -249,10 +250,11 @@
   
 
   .community-image {
-    width: 150px;
-    height: 150px;
+    width: 250px;
+    height: 100px;
     object-fit: cover; /* Mantém a proporção da imagem */
     border-radius: 15px; /* Define bordas arredondadas no modo mobile */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); /* Sombra na imagem */
   }
 }
 
@@ -262,3 +264,4 @@
   text-align: center;
   margin-top: 20px;
 }
+
